--- a/shareme-client/src/App.css
+++ b/shareme-client/src/App.css
@@ -5,7 +5,8 @@
   border-bottom: 1px solid #000;
 }
 
-.fileUploadMain p {
+.fileUploadMain p,
+h2 {
   color: green;
 }
 
@@ -21,6 +22,7 @@
   display: flex;
   justify-content: space-evenly;
   width: 40dvw;
+  color: darkgreen;
 }
 
 @media (max-width: 600px) {
