`Update App.css and listFile.js to change heading and color`
or

`Refactor App.css and listFile.js to update heading and color`

--- a/shareme-client/src/App.css
+++ b/shareme-client/src/App.css
@@ -18,6 +18,11 @@ h2 {
   align-items: center;
 }
 
+.listFileMain p,
+h2 {
+  color: green;
+}
+
 .listFileMain li {
   display: flex;
   justify-content: space-evenly;
